@@ -6,6 +6,7 @@
 	- Bugfix: Properly make i+ IDs linkable in bb2html()
 	- Bugfix: Make sure the user dropdown boxes work on /v+/chars
 	- Bugfix: dbTraitGet() filtering would not always work correctly
+	- Bugfix: Don't allow duplicate trait names/aliasses within the same group
 
 2.20 - 2011-05-01
 	- Added support for sponsored links on VN pages
